<?xml version="1.0"?>
<package format="2">
  <name>navx</name>
  <version>1.0.0</version>
  <description>The navx package</description>

  <maintainer email="schat127@umn.edu">nick</maintainer>

  <license>MIT</license>

  <author email="yanto003@umn.edu">Andrew Yantos</author>
  <author email="sauve031@umn.edu">Jude Suave</author>
  <author email="schat127@umn.edu">Nick Schatz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
